fixed checkbox, icons and margins

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -27,6 +27,10 @@ nav{
 }
 .seleccion{
 	border-bottom:$borde;
+  padding-bottom: 2rem;
+}
+.first{
+  padding-top: 2rem;
 }
 .mseleccion{
 	border:$borde;
