added search busqueda.html

--- a/src/sass/_search.scss
+++ b/src/sass/_search.scss
@@ -59,3 +59,9 @@ section{
 .optional{
 	margin-bottom: 2rem;
 }
+.input-search{
+	width: 53% !important;
+	margin-left: 4rem !important;
+	padding-right: 2rem !important;
+	color: black;
+}
