--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -57,6 +57,13 @@ nav{
     font-weight: bold;
   }
 }
+.estrellas{
+  font-size:12px;
+  span{
+    content: "\2605";
+    color:#00a699;
+  }
+}
 //carousel
 .main{
   width: 100%;
@@ -197,4 +204,121 @@ nav{
 .hamb{
   color: #F57373;
   margin-left: 2rem;
+}
+
+#slider2 {
+  @extend #slider;
+  height:$height2;
+  .trigger2 {
+    @extend .trigger;
+    &:hover { 
+      background: rgba(255,255,255,.5); 
+    }
+    &:before {
+      content: '';
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 0;
+      width: 10px; height: 10px;
+      margin: auto;
+      border-style: solid;
+    }
+  }
+  .prev2 { 
+    @extend .prev;
+    &:before {
+      left: 5px;
+      border-width: 3px 0 0 3px;
+      border-color: $arrows transparent transparent $arrows;
+      transform: rotate(-45deg);
+    }
+  }
+  .next2 { 
+    @extend .next;
+    &:before {
+      right: 5px;
+      border-width: 3px 3px 0 0;
+      border-color: $arrows $arrows transparent transparent;
+      transform: rotate(45deg);
+    }
+  }
+  .frame2 {
+    @extend .frame;
+    .item2 {
+      display: inline-block;
+      position: absolute;
+      top: 0; bottom: 0;
+      width: 33.3%; height: 100%;
+      .inset2 {
+        @extend .inset;
+        margin: $gap * 2 $gap;
+        .title2 { 
+          @extend .title;
+        }
+        .caption2 { 
+          @extend .caption;
+          img{
+            width:100%;
+          }
+        }
+      }
+    }
+  }
+}
+#slider3 {
+  @extend #slider;
+  height:$height2;
+  .trigger3 {
+    @extend .trigger;
+    &:hover { 
+      background: rgba(255,255,255,.5); 
+    }
+    &:before {
+      content: '';
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 0;
+      width: 10px; height: 10px;
+      margin: auto;
+      border-style: solid;
+    }
+  }
+  .prev3 { 
+    @extend .prev;
+    &:before {
+      left: 5px;
+      border-width: 3px 0 0 3px;
+      border-color: $arrows transparent transparent $arrows;
+      transform: rotate(-45deg);
+    }
+  }
+  .next3 { 
+    @extend .next;
+    &:before {
+      right: 5px;
+      border-width: 3px 3px 0 0;
+      border-color: $arrows $arrows transparent transparent;
+      transform: rotate(45deg);
+    }
+  }
+  .frame3 {
+    @extend .frame;
+    .item3 {
+      display: inline-block;
+      position: absolute;
+      top: 0; bottom: 0;
+      width: 16.6%; height: 100%;
+      .inset3 {
+        @extend .inset;
+        margin: $gap * 2 $gap;
+        .title3 { 
+          @extend .title;
+        }
+        .caption3 { 
+          @extend .caption;
+          img{
+            width:100%;
+          }
+        }
+      }
+    }
+  }
 }
