--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -3,6 +3,7 @@ $color-botones-hover:#af5f5f;
 $borde:1px #dce0e0 solid;
 $width: 100%; 
 $height: 400px; 
+$height2:300px;
 $gap: 5px;
 $bg: #DDD; 
 $arrows: #333;
